--- a/biblioteca.html
+++ b/biblioteca.html
@@ -14,11 +14,11 @@
     </header>
     <main class="container">
       <section>
-        
-          <h2>1. Libros disponibles</h2>
+        <details>
+          <summary>1. Libros disponibles</summary>
           <p>Obras de la colección en orden alfabético según el título</p>
           <div id="ejer1"></div>
-        
+        </details>
       </section>
 
       <section>
@@ -143,7 +143,7 @@
             <label class="input-autor"
               >Indica el nombre del autor que buscas :
               <input type="text" name="autor" id="autor" />
-              <input type="submit" value="Buscar"
+              <input type="submit" value="Buscar" id="buscar"
             /></label>
           </form>
           <div id="ejer3"></div>
