--- a/biblioteca.html
+++ b/biblioteca.html
@@ -195,7 +195,7 @@
           <summary >5. Quitar obra de la biblioteca</summary>
                   <form action="#" id="formQuitarObra">
           <div id="selectQuitarObra"></div>
-          <div><button>Quitar obra de la lista</button></div>
+          <div><button id="botonQuitarObra">Quitar obra de la lista</button></div>
         </form>
         </details>
      
